XP-4657 Content Wizard - Change layout of the Navigation Step Toolbar * Fixed border shadows * Added support for docked form collapse button inside the navigator

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-panel.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-panel.less
@@ -17,6 +17,21 @@
       display: block;
     }
 
+
+    .wizard-step-navigator-and-toolbar.pre-scroll-stick {
+
+      .fold-button, > .wizard-step-navigator {
+        padding-right: 32px;
+      }
+
+      &.has-help-text-button {
+        .fold-button, > .wizard-step-navigator {
+          padding-right: 70px;
+        }
+      }
+
+    }
+
   }
 
   .toolbar {
