--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator.less
@@ -1,5 +1,7 @@
 .wizard-step-navigator {
-  width: calc(~'100% - 42px');
+  //width: calc(~'100% - 42px');
+  box-sizing: border-box;
+  width: 100%;
   max-width: 675px;
   display: inline-block;
   background-color: @admin-bg-light-gray;
